platform/traefik/templates/middleware-errors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-pages
  namespace: traefik
spec:
  errors:
    status:
      - "400-599"
    query: /404.html
    service:
      name: error-pages
      port: 80
